[Landing Page] Fix z-index and margin problems

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  z-index: 1;
+  z-index: 100;
   position: fixed;
   top: 0;
 }
@@ -30,14 +30,17 @@
   width: 30%;
 }
 
-#trigger, #burger, #burger:before, #burger:after {
+#trigger,
+#burger,
+#burger:before,
+#burger:after {
   position: absolute;
   top: 25px;
   right: 25px;
-  background: var(--SosTagBlue);;
+  background: var(--SosTagBlue);
   width: 30px;
   height: 5px;
-  transition: .2s ease;
+  transition: 0.2s ease;
   cursor: pointer;
   z-index: 1;
 }
@@ -46,8 +49,8 @@
   background: none;
   top: 25%;
 }
-#burger{
-  top:25%;
+#burger {
+  top: 25%;
 }
 #burger:before {
   content: " ";
@@ -62,7 +65,7 @@
 #menu-toggle:checked + #trigger + #burger {
   top: 35px;
   transform: rotate(180deg);
-  transition: transform .2s ease;
+  transition: transform 0.2s ease;
 }
 
 #menu-toggle:checked + #trigger + #burger:before {
@@ -70,26 +73,27 @@
   top: -2px;
   left: 18px;
   transform: rotate(45deg) translateX(-5px);
-  transition: transform .2s ease;
+  transition: transform 0.2s ease;
 }
 #menu-toggle:checked + #trigger + #burger:after {
   width: 20px;
   top: 2px;
   left: 18px;
   transform: rotate(-45deg) translateX(-5px);
-  transition: transform .2s ease;
+  transition: transform 0.2s ease;
 }
 #menu {
   position: absolute;
-  top: 0; right:0;
-  margin: 0; padding: 0;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
   width: 110px;
   height: 110px;
-  animation: not-checked-anim .2s both;
-  transition: .2s;
+  animation: not-checked-anim 0.2s both;
+  transition: 0.2s;
   text-align: center;
 }
-
 
 #menu li a {
   margin: 75px 0 -55px 0;
@@ -116,35 +120,35 @@
 .header--link-item:focus {
   display: block;
   color: #333;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .header--link-item {
   display: none;
 }
 
-#menu-toggle:checked + #trigger ~ #menu li a{
+#menu-toggle:checked + #trigger ~ #menu li a {
   opacity: 1;
   display: block;
 }
 
 #menu-toggle:checked + #trigger ~ #menu {
-  box-shadow: 0 2px 5px rgba(0,0,0,0.26);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
   background-color: #fff;
   border-bottom-left-radius: 100%;
 }
 
-.NavDesktop [type="checkbox"]:not(:checked), .NavDesktop [type="checkbox"]:checked {
+.NavDesktop [type="checkbox"]:not(:checked),
+.NavDesktop [type="checkbox"]:checked {
   display: none;
 }
-
 
 @media (max-width: 599px) {
   @keyframes checked-anim {
     100% {
-        width: 100%;
-        height: 100vh;
-        border-radius: 0;
+      width: 100%;
+      height: 100vh;
+      border-radius: 0;
     }
   }
   @keyframes not-checked-anim {
@@ -152,11 +156,11 @@
       width: 100%;
       height: 100vh;
       border-radius: 0;
-    }  
+    }
   }
 
   #menu-toggle:checked + #trigger + #burger + #menu {
-    animation: checked-anim .2s ease both;
+    animation: checked-anim 0.2s ease both;
   }
 
   .header {
@@ -198,10 +202,12 @@
 }
 
 @media (min-width: 600px) {
-   #menu {
+  #menu {
     position: absolute;
-    top: 0; right:0;
-    margin: 0; padding: 0;
+    top: 0;
+    right: 0;
+    margin: 0;
+    padding: 0;
     width: 110px;
     height: 80px;
     /* border-bottom-left-radius: 0; */
@@ -253,12 +259,11 @@
   }
 }
 @media (min-width: 600px) {
-
   @keyframes checked-anim {
     100% {
-        width: 50vw;
-        height: 50vh;
-        border-radius: 0;
+      width: 50vw;
+      height: 50vh;
+      border-radius: 0;
     }
   }
   @keyframes not-checked-anim {
@@ -266,20 +271,20 @@
       width: 50vw;
       height: 50vh;
       border-radius: 0;
-    }  
+    }
   }
 
   #menu-toggle:checked + #trigger + #burger + #menu {
-    animation: checked-anim .2s ease both;
+    animation: checked-anim 0.2s ease both;
   }
 }
 
 @media (min-width: 1200px) {
   @keyframes checked-anim {
     100% {
-        width: 20%;
-        height: 40vh;
-        border-radius: 0;
+      width: 20%;
+      height: 40vh;
+      border-radius: 0;
     }
   }
   @keyframes not-checked-anim {
@@ -287,13 +292,13 @@
       width: 20%;
       height: 40vh;
       border-radius: 0;
-    }  
+    }
   }
 
   #menu-toggle:checked + #trigger + #burger + #menu {
-    animation: checked-anim .2s ease both;
+    animation: checked-anim 0.2s ease both;
   }
-  
+
   .hideDesktop svg {
     display: none;
   }
